--- a/www/index.html
+++ b/www/index.html
@@ -73,8 +73,8 @@
               </a>
             </div>
             <div>
-              <h1 id="school-name">My School</h1>
-              <p id="school-description">32 Members | 12 Groups | 7 Events</p>
+              <h1>School Of Ross</h1>
+              <p>32 Members | 12 Groups | 7 Events</p>
             </div>
             <div class="right">
               <a href="/profile-screen/" class="link icon-only">
@@ -245,12 +245,7 @@
     var User;
     var uid;
 
-
-
-
-
-
-    /**********AUTHENTICATION**********/
+    /////////authentication section
 
     firebase.auth().onAuthStateChanged(function(user) { //This function runs every time the users authentication state changes (eg. the user signs in or out)
       if (user) { // User is signed in.
@@ -267,7 +262,7 @@
               return this.firstName + " " + this.lastName;
             }
           }
-          updateHeaderInfo(User);
+          testFunction();
           loadSchoolEvents();
           loadSchoolChats();
           loadSubscribedChats();
@@ -294,7 +289,7 @@
       }
     });
 
-    function signUp() {
+    function signUp() { //signs up a new user
       app.preloader.show();
 
       var email = document.getElementById("email").value;
@@ -314,7 +309,7 @@
       });
     }
 
-    function signIn() {
+    function signIn() { //Signs in a user
       app.preloader.show();
       var username = document.getElementById("uname").value;
       var password = document.getElementById("pword").value;
@@ -331,7 +326,7 @@
       console.log(app.views.main.router.url);
     }
 
-    function signOut() {
+    function signOut() { //Signs out the user
       firebase.auth().signOut().then(function() {
         // Sign-out successful.
       }).catch(function(error) {
@@ -339,29 +334,19 @@
       });
     }
 
-    function updateUserData() {
-      var firstName = document.getElementById("update-first-name");
-      var lastName = document.getElementById("update-last-name");
-      var profilePicUrl = document.getElementById("update-profile-pic");
+    function editUserData(firstName, LastName, profilePicUrl) { //Edits the users profile data.
 
     }
 
-
-
-
-
-    /**********EVENTS**********/
-
-    //loads school events from the database
+    ///////////Events
     function loadSchoolEvents() {
       db.collection("school").doc(User.school).collection("event").get().then(function(querySnapshot) {
         querySnapshot.forEach(function(doc) {
           //this loop runs once for every event in the current school
-          showSchoolEvent(doc.get("name"), doc.get("image"), doc.get("day"), doc.get("time"), doc.get("location"), doc.get("description"), doc.get("guests"));
+          addEvent(doc.get("name"), doc.get("image"), doc.get("day"), doc.get("time"), doc.get("location"), doc.get("description"), doc.get("guests"));
         });
       });
     }
-
     //adds a event so the school database with the provided data
     function addSchoolEvent(name, image, day, time, location, description, guests) {
       db.collection("school").doc(User.school).collection("event").add({
@@ -377,8 +362,7 @@
 
     }
 
-    //Shows an event on the local UI.
-    function showSchoolEvent(name, image, day, time, location, description, guests) {
+    function addEvent(name, image, day, time, location, description, guests) { //Adds an event to the local UI.
 
       app.swiper.destroy('.swiper-container');
 
@@ -428,14 +412,8 @@
 
     }
 
-
-
-
-
-    /**********CHATS**********/
-
-    //Loads all the chats in the users current school from the database and displays them
-    function loadSchoolChats() {
+    //////Chats
+    function loadSchoolChats() { //Loads all the chats in the users current school.
       //TODO clear the currently loaded chats if there are any
       db.collection("school").doc(User.school).collection("chats").get().then(function(querySnapshot) {
         querySnapshot.forEach(function(doc) {
@@ -459,8 +437,7 @@
       });
     }
 
-    //Loads all the chats that the user is subscribed to
-    function loadSubscribedChats() {
+    function loadSubscribedChats() { //Loads the chats that the user is subscribed to.
 
       db.collection("users").doc(User.uid).collection("chats").get().then(function(querySnapshot) {
         querySnapshot.forEach(function(doc) {
